# app/Http/Resources/CommentResource.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Resources;
 
+use Cog\Laravel\Love\Reaction\Models\Reaction;
 use Illuminate\Http\Resources\Json\JsonResource;
 
 
@@ -14,28 +15,32 @@ class CommentResource extends JsonResource
     public function toArray($request)
     {
         return [
-            'comments' => ''
+            'id' => $this->id,
+            'comment' => $this->comment,
+            'commentable' => $this->commentable,
+            'commentable_id' => $this->commentable_id,
+            'commentable_type' => $this->commentable_type,
+            'commenter' => $this->commenter,
+            'commenter_id' => $this->commenter_id,
+            'commenter_type' => $this->commenter_type,
+//            'likes'=>new LikeResource($this),
+            'reacter' => $this->reacter,
+            'reacter_id' => $this->reacter_id?:'',
+            'reactions' => Reaction::all()
+                ->where('reaction_type_id', 1)
+                ->where('reactant_id', $this->id),
+            'created_at_dates' => [
+                "created_at_human" => $this->created_at->diffForHumans(),
+                "created_at" => $this->created_at,
+            ],
+            'updated_at_dates' => [
+                "updated_at_human" => $this->updated_at->diffForHumans(),
+                "updated_at" => $this->updated_at,
+            ],
+            //  'user' => new UserResource($this->user),
         ];
     }
 }
 
 
-//         return [
-//            'id' => $this->id,
-//            'comment' => $this->body,
-//            'commentable_id' => $this->commentable_id,
-//            'commentable' => $this->commentable,
-//            'commentable_type' => $this->commentable_type,
-//            'commenter' => $this->commenter,
-//            'commenter_id' => $this->commenter_id,
-//            'commenter_type' => $this->commenter_type,
-//            'created_at_dates' => [
-//                "created_at_human" => $this->created_at->diffForHumans(),
-//                "created_at" => $this->created_at,
-//            ],
-//            'updated_at_dates' => [
-//                "updated_at_human" => $this->updated_at->diffForHumans(),
-//                "updated_at" => $this->updated_at,
-//            ],
-//          //  'user' => new UserResource($this->user),
-//        ];
+
